resources/docs/1.4/events/repetitive-events.md
# Repetitive Events

In Eventmie Pro, you can create daily, weekly & monthly repetitive events and classes. Like- daily repetitive Yoga classes, weekly repetitive webinars, and much more.

---

![Repetitive event view](http://eventmie-pro-docs.test/images/events-repetitive-event-view.jpg "Repetitive event view")

---

>{primary} We'll discuss unique steps in creating a Repetitive event, the rest of all is the same as Simple Event.

---


- [Create Repetitive Event](#create-repetitive-event)
- [Timing](#timing)
- [Repetitive Schedules](#repetitive-schedules)
- [Repetitive Type: Daily](#repetitive-type-daily)
- [Repetitive Type: Weekly](#repetitive-type-weekly)
- [Repetitive Type: Monthly](#repetitive-type-monthly)
- [Monthly/Weekly Payment](#monthly-weekly-payment)


<a name="create-repetitive-event"></a>
## Create Repetitive Event

Repetitive event here refers to the events or classes having repetitive schedules. Click on <larecipe-button type="primary" size="sm" rounded>Create Event</larecipe-button> to get started. 😤


<a name="Timing"></a>
## Timing

To start creating repetitive schedules, first set a time range, within which, the repetitive event is going to be held.

<br>

**Form Fields**

- Start date
- Start time
- End date
- End time
- Add Repetitive Schedules


---

>{success} Click and check the `Add Repetitive Schedules` checkbox to get started with repetitive schedules.

---


<a name="Repetitive-Schedule"></a>
## Repetitive Schedule

Once you check `Add Repetitive Schedules` checkbox, a new interface shows up.

1. It'll auto-generate Schedules rows according to the `Total Months` between `Start & End date`.
2. You can modify each Schedule separately.
3. The customer has to purchase a ticket for every `day`.

---

>{primary} If you don't like customers to pay for every day, we've got a solution for that too. We'll discuss it in the `Monthly/Weekly Payment` section.

---

<br> 

**Let's start with Repetitive Type**


<a name="repetitive-type-daily"></a>
## Repetitive Type: Daily

The event that repeats every `day` from start to end date.

<br>

**Form Fields**

- **Repetitive Dates (Repeat Except)**- set dates on which the event `DO NOT` repeats.
- **Start Time** - set start time for a particular schedule of each month.
- **End Time** - set end time for a particular schedule of each month.

---

>{success} You can set different `start & end time` for every month's schedule.

---

>{primary} It also shows you calculations of each schedule days and time in realtime. 

---

**This is how Daily Repetitive Schedules look like**

---

![Daily Repetitive Schedules](http://eventmie-pro-docs.test/images/events-repetitive-daily.jpg "Daily Repetitive Schedules")

---

**And this is how they look like on Event page**

---

![Daily Repetitive Schedules View](http://eventmie-pro-docs.test/images/events-repetitive-daily-view.jpg "Daily Repetitive Schedules View")

---




<a name="repetitive-type-weekly"></a>
## Repetitive Type: Weekly

The event that repeats every `week` from start to end date.

<br>

**Form Fields**
- **Repetitive Days** - set weekdays on which the event repeats.
- **Start Time** - set start time for a particular schedule of each month.
- **End Time** - set end time for a particular schedule of each month.

---

**This is how Weekly Repetitive Schedules look like**

---

![Weekly Repetitive Schedules](http://eventmie-pro-docs.test/images/events-repetitive-weekly.jpg "Weekly Repetitive Schedules")

---

**And this is how they look like on Event page**

---

![Weekly Repetitive Schedules View](http://eventmie-pro-docs.test/images/events-repetitive-weekly-view.jpg "Weekly Repetitive Schedules View")

---


<a name="repetitive-type-monthly"></a>
## Repetitive Type: Monthly

The event that repeats every `month` from start to end date. 

<br>

**Form Fields**

- **Repetitive Dates (Repeat Every)** - set dates on which the event repeats.
- **Start Time** - set start time for a particular schedule of each month.
- **End Time** - set end time for a particular schedule of each month.


---

**This is how Monthly Repetitive Schedules look like**

---

![Monthly Repetitive Schedules](http://eventmie-pro-docs.test/images/events-repetitive-monthly.jpg "Monthly Repetitive Schedules")

---

**And this is how they look like on Event page**

---

![Monthly Repetitive Schedules View](http://eventmie-pro-docs.test/images/events-repetitive-monthly-view.jpg "Monthly Repetitive Schedules View")

---



<a name="monthly-weekly-payment"></a>
## Monthly/Weekly Payment

---

>{primary} Don't worry, we haven't missed this one. 😉

---

In case of repetitive schedules, sometimes you want to get paid on a `Monthly` or `Weekly` basis for all schedules within a `Month or Week`, instead of each day separately. 

<br>

This means the customer can attend the event for the whole month or week, by paying a **Full Advance Payment** for a complete month or week schedules. 

<br>

For this kind of scenario, here's the `Monthly or Weekly Payment` to the rescue. 🥰

<br>

Let's get started. Check the `Monthly or Weekly Payment` checkbox, e.g for `Repetitive Type: Monthly` type of event. After that-

1. Set the ticket prices for whole month schedules, instead of a single schedule.
2. When a customer makes the payment, you get a whole month payment instead of a single schedule.


---

**This is how Monthly Repetitive Schedules with Monthly Payment option checked, look like**

---

![Monthly Repetitive Schedules Monthly Payment](http://eventmie-pro-docs.test/images/events-repetitive-merge-schedule.jpg "Monthly Repetitive Schedules  Monthly Payment")

---

**And this is how they look like on Event page**

---

![Monthly Repetitive Schedules  Monthly Payment View](http://eventmie-pro-docs.test/images/events-repetitive-merge-schedule-view.jpg "Monthly Repetitive Schedules  Monthly Payment View")

---